--- a/package.json
+++ b/package.json
@@ -3,8 +3,33 @@
   "version": "0.1.1",
   "description": "The brains of the Clone.",
   "dependencies": {
-    "html-loader": "^0.4.5",
-    "webpack": "^2.2.0-rc.3"
+    "@types/axios": "^0.9.34",
+    "@types/lodash": "^4.14.43",
+    "@types/react": "^15.0.13",
+    "@types/react-dom": "^0.14.23",
+    "@types/react-select": "^1.0.39",
+    "axios": "^0.15.3",
+    "bootstrap": "^3.3.7",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.5",
+    "file-loader": "^0.9.0",
+    "font-awesome": "^4.7.0",
+    "lodash": "^4.17.2",
+    "mobx": "^2.7.0",
+    "mobx-react": "^4.0.3",
+    "node-sass": "^4.0.0",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
+    "react-lite": "^0.15.33",
+    "react-select": "^1.0.0-rc.2",
+    "roboto-font": "^0.1.0",
+    "roboto-fontface": "^0.6.0",
+    "sass-loader": "^4.1.0",
+    "style-loader": "^0.13.1",
+    "ts-loader": "^1.3.3",
+    "typescript": "^2.1.4",
+    "url-loader": "^0.5.7",
+    "webpack": "^2.2.0-rc.3",
+    "webpack-uglify-js-plugin": "^1.1.9"
   },
   "main": "index.js",
   "directories": {
@@ -18,13 +43,10 @@
     "type": "git",
     "url": "git+https://github.com/bigearth/cloneos.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "EARTH",
+  "license": "GPLv2",
   "bugs": {
     "url": "https://github.com/bigearth/cloneos/issues"
   },
-  "homepage": "https://github.com/bigearth/cloneos#readme",
-  "devDependencies": {
-    "html-loader": "^0.4.5"
-  }
+  "homepage": "https://github.com/bigearth/cloneos#readme"
 }
